--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Dice Game</title>
 
 <!-- css link -->
-<link rel="stylesheet" href="./styles.css">
+<link rel="stylesheet" href="styles.css">
 
 </head>
 <body>
@@ -22,12 +22,12 @@
 
    <div class="child1">
     <h2 class="player1">Player 1</h2>
-    <img src="./images/dice6.png" alt="dice-6">
+    <img src="images/dice6.png" alt="dice-6">
    </div>
 
    <div class="child2">
     <h2 class="player2">Player 2</h2>
-    <img src="./images/dice6.png" alt="dice-6">
+    <img src="images/dice6.png" alt="dice-6">
    </div>
   </section>
 
@@ -41,6 +41,6 @@
 
 
  <!-- js link -->
- <script src="./index.js"></script>
+ <script src="index.js"></script>
 </body>
 </html>
